fix: maps gap to mt

--- a/mainsite/static/mainsite/style.css
+++ b/mainsite/static/mainsite/style.css
@@ -583,9 +583,10 @@ p.text {
   height: auto;
   justify-content: center;
   flex-direction: column;
-  gap: 50px;
+  /* gap: 50px; */
 }
 .my_map {
+  margin-top: 50px;
   align-self: center;
   /* margin-left: auto;
   margin-right: auto; */
